--- a/Fase 01 - Web (Front End)/index.html
+++ b/Fase 01 - Web (Front End)/index.html
@@ -73,6 +73,28 @@
 
         </header>
 
+        <!-- Hero -->
+        <section id="hero-principal">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-4">
+                        <h1 class="titulo-principal">Todas as escolas em um só lugar.</h1>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <p class="paragrafo-principal">O sistema do Educa Brasil é especialista em te auxiliar a encontrar uma escola ideal para as suas necessidades.</p>
+                    </div>
+                </div>
+                <div class="row mt-5">
+                    <div class="col-sm-4 d-flex flex-column">
+                        <span for="btn-start">Vamos começar?</span>
+                        <input type="button" id="btn-start" value="Selecione um estado" class="mt-3">
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Main -->
         <main id="main-principal">
 
