Seção sobre estatísticas e rodapé
Co-authored-by: Bianca Gomes <bgsrd@outlook.com>

--- a/Fase 01 - Web (Front End)/index.html
+++ b/Fase 01 - Web (Front End)/index.html
@@ -98,12 +98,13 @@
                 </div>
             </section>
 
+            <!-- Sobre o Site -->
             <section id="sobre">
 
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-sm-6">
-                            <h1>Escolha a melhor escola à partir de dados do Censo Escolar do Inep</h1>
+                            <h1 class="h1-verde">Escolha a melhor escola à partir de dados do Censo Escolar do Inep</h1>
                         </div>
                     </div>
                     <div class="row justify-content-center mt-2">
@@ -134,10 +135,27 @@
 
             </section>
 
+            <!-- Sobre Estatísticas -->
+            <section id="sobre-estatisticas">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-5">
+                            <h1 class="h1-verde">Consulte as estatísticas gerais dos dados das escolas</h1>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <p>O sistema do Educa Brasil permite que você visualize os dados gerais das escolas brasileiras à partir de gráficos personalizados com diversas informações.</p>
+                        </div>
+                    </div>
+                </div>
+                
+            </section>
+
         </main>
 
         <!-- Footer -->
-        <footer id="footer-principal" class="grey lighten-1 p-3">
+        <footer id="footer-principal" class="p-3">
             <div class="footer-copy text-center"><strong>2019 &copy; Bianca Gomes Rodrigues, Pietro Zuntini Bonfim</strong></div>
         </footer>
 
