Um pouco de design responsivo
Co-authored-by: Bianca Gomes <bgsrd@outlook.com>

--- a/Fase 01 - Web (Front End)/index.html
+++ b/Fase 01 - Web (Front End)/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="lib/mdbootstrap/css/bootstrap.css">
         <link rel="stylesheet" href="lib/mdbootstrap/css/mdb.css">
         <link rel="stylesheet" href="css/educa_brasil.css">
+        <link rel="stylesheet" href="css/design-responsivo.css">
 
         <!-- Icones -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -52,13 +53,6 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#!">Estátísticas</a>
                         </li>
-                        
-                        <form method="POST" action="#!" class="form-inline" id="form-busca-principal">
-                            <i class="fas fa-search fa-flip-horizontal"></i>
-                            <div class="md-form my-0">
-                                <input type="search" name="busca-principal" id="busca-principal" placeholder="Buscar por estado, município ou escola">
-                            </div>
-                        </form>
                         
                     </ul>
 
