Ajustes no CSS, adição de fontes, mais classes
Co-authored-by: Pietro Zuntini <pietrozuntini@gmail.com>

--- a/Fase 01 - Web (Front End)/index.html
+++ b/Fase 01 - Web (Front End)/index.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="lib/mdbootstrap/css/mdb.css">
         <link rel="stylesheet" href="css/educa_brasil.css">
         <link rel="stylesheet" href="css/design-responsivo.css">
+        <link rel="stylesheet" href="css/fontes.css">
 
         <!-- Icones -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -98,8 +99,8 @@
 
                 <div class="container">
                     <div class="row justify-content-center">
-                        <div class="col-sm-6">
-                            <h1 class="h1-verde">Escolha a melhor escola à partir de dados do Censo Escolar do Inep</h1>
+                        <div class="col-sm-7">
+                            <h2 class="verde-escuro-text semibold">Escolha a melhor escola à partir de dados do Censo Escolar do Inep</h2>
                         </div>
                     </div>
                     <div class="row justify-content-center mt-2">
@@ -135,7 +136,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-5">
-                            <h1 class="h1-verde">Consulte as estatísticas gerais dos dados das escolas</h1>
+                            <h2 class="verde-escuro-text semibold">Consulte as estatísticas gerais dos dados das escolas</h2>
                         </div>
                     </div>
                     <div class="row">
