--- a/Fase 01 - Web (Front End)/index.html
+++ b/Fase 01 - Web (Front End)/index.html
@@ -137,11 +137,10 @@
                     <div class="row">
                         <div class="col-sm-5">
                             <h2 class="verde-escuro-text semibold">Consulte as estatísticas gerais dos dados das escolas</h2>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-6">
                             <p>O sistema do Educa Brasil permite que você visualize os dados gerais das escolas brasileiras à partir de gráficos personalizados com diversas informações.</p>
+                        </div>
+                        <div class="col-sm-7">
+                            <div id="grafico-brasil"></div>
                         </div>
                     </div>
                 </div>
@@ -157,10 +156,18 @@
 
 
         <!-- Javascript -->
-        <script src="lib/jquery/jquery-3.3.1.min.js"></script>
-        <script src="lib/mdbootstrap/js/bootstrap.js"></script>
-        <script src="lib/mdbootstrap/js/mdb.js"></script>
+
+        <script src="lib/jquery/jquery-3.3.1.min.js"></script>                          <!-- JQquery -->
+        <script src="lib/mdbootstrap/js/bootstrap.js"></script>                         <!-- Bootstrap -->
+        <script src="lib/mdbootstrap/js/mdb.js"></script>                               <!-- MDBootstrap -->
         <!-- <script src="lib/popper/popper.min.js"></script> -->
+
+        <!-- Amcharts v4.0 -->
+        <script src="lib/amchats4/core.js"></script>
+        <script src="lib/amchats4/maps.js"></script>
+        <script src="lib/amchats4/geodata/brazilLow.js"></script>
+        <script src="lib/amchats4/animated.js"></script>
+        <script src="js/index_grafico.js"></script>
 
     </body>
 
