--- a/Fase 01 - Web (Front End)/index.html
+++ b/Fase 01 - Web (Front End)/index.html
@@ -46,7 +46,7 @@
 
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#!">Sobre</a>
+                            <a class="nav-link" href="index.html#sobre">Sobre</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="escolas.html">Escolas</a>
