Cartão das escolas
Co-authored-by: Pietro Zuntini <pietrozuntini@gmail.com>

--- a/Fase 01 - Web (Front End)/escolas.html
+++ b/Fase 01 - Web (Front End)/escolas.html
@@ -49,7 +49,7 @@
                             <a class="nav-link" href="index.html#sobre">Sobre</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#!">Escolas</a>
+                            <a class="nav-link" href="escolas.html">Escolas</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#!">Estátísticas</a>
@@ -93,6 +93,38 @@
                         <h1 class="verde-escuro-text">Resultado da Busca:</h1>
                         <h2 class="verde-claro-text">São Paulo</h2>
                         <h3 class="verde-claro-text mt-4">Sorocaba</h3>
+
+                        <!-- Escolas -->
+                        <section id="resultado-escolas" class="mt-4">
+
+                            <article id="cartao-escola">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-sm-8" id="id-nome">
+                                            21114978 - UNIDADE INTEGRADA DE EDUCACAO ESCOLAR INDIGENA MONTE SIAO
+                                        </div>
+                                        <div class="col text-right" id="dep-adm">
+                                            Pública
+                                        </div>
+                                    </div>
+                                    <div class="row" id="situacao-ofertas">
+                                        <div class="col" id="situacao">
+                                            Em Atividade
+                                        </div>
+                                        <div class="col text-right" id="ofertas">
+                                            <span class="badge badge-pill badge-light">C</span>
+                                            <span class="badge badge-pill badge-light">PE</span>
+                                            <span class="badge badge-pill badge-light">EFI</span>
+                                            <span class="badge badge-pill badge-light">EFII</span>
+                                            <span class="badge badge-pill badge-light">EM</span>
+                                            <span class="badge badge-pill badge-light">EMI</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </article>
+
+                        </section>
+                        <!-- Fim Escolas -->
 
                     </div>
                     <div class="col">
