Algumas mudanças pontuais no design
Co-authored-by: Bianca Gomes <bgsrd@outlook.com>

--- a/Fase 01 - Web (Front End)/index.html
+++ b/Fase 01 - Web (Front End)/index.html
@@ -88,7 +88,7 @@
                     <div class="row mt-5">
                         <div class="col-sm-4 d-flex flex-column">
                             <span for="btn-start">Vamos começar?</span>
-                            <input type="button" id="btn-start" value="Selecione um estado" class="mt-3">
+                            <input type="button" id="btn-start" value="Selecione um estado" class="mt-3 z-depth-2">
                         </div>
                     </div>
                 </div>
