Retirada do efeito de arrastar do gráfico da home
Co-authored-by: Pietro Zuntini <pietrozuntini@gmail.com>

--- a/Fase 01 - Web (Front End)/index.html
+++ b/Fase 01 - Web (Front End)/index.html
@@ -151,7 +151,7 @@
 
         <!-- Footer -->
         <footer id="footer-principal" class="p-3">
-            <div class="footer-copy text-center"><strong>2019 &copy; Bianca Gomes Rodrigues, Pietro Zuntini Bonfim</strong></div>
+            <div class="footer-copy text-center">&copy; 2019 Copyright: Bianca Gomes Rodrigues, Pietro Zuntini Bonfim</div>
         </footer>
 
 
