- Inicio pagina de estatisticas - Graficos de situacao, dep adm, localizacao e oferta
Co-authored-by: Bianca Gomes <bgsrd@outlook.com>

--- a/Fase 01 - Web (Front End)/index.html
+++ b/Fase 01 - Web (Front End)/index.html
@@ -52,7 +52,7 @@
                             <a class="nav-link" href="escolas.html">Escolas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#!">Estátísticas</a>
+                            <a class="nav-link" href="estatisticas.html">Estátísticas</a>
                         </li>
                         
                     </ul>
