--- a/Fase 01 - Web (Front End)/escolas.html
+++ b/Fase 01 - Web (Front End)/escolas.html
@@ -53,7 +53,7 @@
                         <a class="nav-link" href="escolas.html">Escolas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#!">Estátísticas</a>
+                        <a class="nav-link" href="estatisticas.html">Estátísticas</a>
                     </li>
 
                 </ul>
