Criação dos selects do Estado e Escola
Co-authored-by: Bianca Gomes <bgsrd@outlook.com>

--- a/Fase 01 - Web (Front End)/escolas.html
+++ b/Fase 01 - Web (Front End)/escolas.html
@@ -76,13 +76,25 @@
                     <li class="list-inline-item">Buscar</li>
                     <li class="list-inline-item">
                         <select name="select-estado" id="select-estado">
+                            <option></option>
                             <option value="SP">São Paulo</option>
                             <option value="GO">Goiás</option>
                             <option value="RJ">Rio de Janeiro</option>
                         </select>
                     </li>
-                    <li class="list-inline-item">Município</li>
-                    <li class="list-inline-item">Escola</li>
+                    <li class="list-inline-item">
+                        <select name="select-municipio" id="select-municipio">
+                            <option></option>
+                            <option value="Sorocaba">Sorocaba</option>
+                        </select>
+                    </li>
+                    <li class="list-inline-item">
+                        <select name="select-escola" id="select-escola">
+                            <option></option>
+                            <option value="7193282">Colégio Uirapuru</option>
+                            <option value="1830923">Colégio Objetivo</option>
+                        </select>
+                    </li>
                 </ul>
             </div>
 
