Comportamento esperado dos dropdown
Co-authored-by: Pietro Zuntini <pietrozuntini@gmail.com>

--- a/Fase 01 - Web (Front End)/escolas.html
+++ b/Fase 01 - Web (Front End)/escolas.html
@@ -115,7 +115,7 @@
                                     <i class="fas fa-caret-down fa-lg"></i>
                                 </li-icon>
                             </button>
-                            <div class="filtros-dropdown">
+                            <div class="filtros-dropdown closed">
                                 <fieldset>
                                     <div class="custom-control custom-checkbox">
                                         <input type="checkbox" class="custom-control-input" id="em-atividade">
@@ -146,7 +146,7 @@
                                     <i class="fas fa-caret-down fa-lg"></i>
                                 </li-icon>
                             </button>
-                            <div class="filtros-dropdown">
+                            <div class="filtros-dropdown closed">
                                 <fieldset>
                                     <div class="custom-control custom-checkbox">
                                         <input type="checkbox" class="custom-control-input" id="federal">
@@ -181,7 +181,7 @@
                                     <i class="fas fa-caret-down fa-lg"></i>
                                 </li-icon>
                             </button>
-                            <div class="filtros-dropdown">
+                            <div class="filtros-dropdown closed">
                                 <fieldset>
                                     <div class="custom-control custom-checkbox">
                                         <input type="checkbox" class="custom-control-input" id="creche">
