Alguns ajustes ao CSS/fontes da página
Co-authored-by: Bianca Gomes <bgsrd@outlook.com>

--- a/Fase 01 - Web (Front End)/escolas.html
+++ b/Fase 01 - Web (Front End)/escolas.html
@@ -70,7 +70,7 @@
     <header id="header-principal">
 
         <!-- Barra de Navegação de Busca -->
-        <div id="busca">
+        <section id="busca">
 
             <div class="container">
                 <ul class="list-inline navbar-busca">
@@ -99,11 +99,11 @@
                 </ul>
             </div>
 
-        </div>
+        </section>
 
         <section id="secao-filtros">
 
-            <div class="container my-3">
+            <div class="container">
 
                 <ul class="filtros d-flex flex-row">
 
